<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/initial_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <ImageView
        android:id="@+id/movie_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
            android:layout_gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/camera" />

        <TextView
        android:id="@+id/movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
        android:gravity="center"
            android:padding="5dp"
        android:text="@string/movie_name"
        android:textColor="#051e3e"
            android:textStyle="bold"
        android:textSize="20sp"/>

        <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
        android:gravity="start"
        android:text="@string/summary"
        android:textColor="#451e3e"
        android:textSize="16sp" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="start"
            android:text="@string/link"
            android:textColor="#eb000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="#051e3e"
                android:text="@string/rated"
                />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#051e3e"
                android:text="@string/no_current_ratings"/>
        </LinearLayout>

        <TextView
            android:id="@+id/reviewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:text="@string/reviewer"
            android:textColor="#451e3e"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp"
                android:text="@string/published"
                />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/date" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
</ScrollView>