<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        card_view:cardCornerRadius="2dp"
        android:layout_marginBottom="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <!--android:weightSum="3"-->

            <ImageView
                android:id="@+id/thumbnail_movie"
                android:layout_height="110dp"
                android:layout_width="110dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_launcher_background" />

            <LinearLayout
                android:id="@+id/card_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/movie_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="5dp"
                        android:text="@string/movie_title"
                        android:gravity="start"
                        android:maxLines="2"
                        android:ems="3"
                        android:layout_weight="1.3"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_weight="0.7"
                        android:gravity="end"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="14sp"
                    android:maxLines="2"
                    android:text="@string/headline"
                    />

                <TextView
                    android:id="@+id/reviewer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    android:text="@string/reviewer"
                    />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textSize="12sp"
                    android:text="@string/date"
                    />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>